2007-10-08  Eric B. Weddington  <eweddington@cso.atmel.com>

	Add new device: ATtiny48.
	* configure.ac: Add new devices.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iotn48.h: New file.
	* NEWS: Update new devices list.

2007-10-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Resolve bug #21228: Missing 3rd clause in BSD license in
	documentation pages
	* doc/api/main_page.dox: Add clause #3.
	* doc/api/using-tools.dox: Add clause #3.

2007-10-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Unbreak the documentation build for recent versions of doxygen.
	NB: the latex package "urc" must be installed in order to
	successfully build the documentation.

	* doc/api/doxygen.config.in: Update for doxygen 1.5.x.  Most of
	the changes have been generated by running doxygen -u.  In
	addition, the input encoding has been changed to iso-8859-1
	because this matches our current documentation.
	* doc/api/overview.dox: Fix two illegal special characters that
	were not part of ISO8859-1.
	* include/stdio.h: Remove an unneeded hyphenation.

2007-10-03  Eric B. Weddington  <eweddington@cso.atmel.com>

	Add new device: ATtiny43U.
	* configure.ac: Add new device.
	* devtools/gen-avr-lib-tree.sh: ditto.
	* include/avr/Makefile.am: ditto.
	* include/avr/io.h: ditto.
	* include/avr/power.h: ditto.
	* doc/api/using-tools.dox: ditto.
	* doc/api/main_page.dox: ditto.
	* include/avr/iotn43u.h: New file.
	* NEWS: Update new devices list.

2007-10-03  Eric B. Weddington  <eweddington@cso.atmel.com>

	* devtools/gen-avr-lib-tree.sh: Optimize for space for all devices.

2007-10-03  Eric B. Weddington  <eweddington@cso.atmel.com>

	The start of a Fuse API.
	* include/avr/fuse.h: New file.
	* include/avr/io.h: Add inclusion of fuse.h.
	* include/avr/Makefile.am: Add fuse.h to distribution list.